# lib_desparbes

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  install.sh
include/: list.h  queue.h  search.h  stack.h  state.h  swap.h
src/: CMakeLists.txt  list.c  queue.c  search.c  stack.c  state.c  swap.c
test/: CMakeLists.txt  test_list.c  test_queue.c  test_search.c  test_stack.c  test_state.c  test_swap.c
